tests/ui/imports/ambiguous-panic-rename-builtin.stderr
error: `env!()` takes 1 or 2 arguments
  --> $DIR/ambiguous-panic-rename-builtin.rs:12:5
   |
LL |     panic!();
   |     ^^^^^^^^

warning: `panic` is ambiguous
  --> $DIR/ambiguous-panic-rename-builtin.rs:12:5
   |
LL |     panic!();
   |     ^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #147319 <https://github.com/rust-lang/rust/issues/147319>
   = note: ambiguous because of a conflict between a name from a glob import and an outer scope during import or macro resolution
note: `panic` could refer to the macro imported here
  --> $DIR/ambiguous-panic-rename-builtin.rs:9:5
   |
LL | use m1::*;
   |     ^^^^^
   = help: consider adding an explicit import of `panic` to disambiguate
   = help: or use `crate::panic` to refer to this macro unambiguously
note: `panic` could also refer to a macro from prelude
  --> $SRC_DIR/core/src/prelude/mod.rs:LL:COL
   = note: `#[warn(ambiguous_panic_imports)]` (part of `#[warn(future_incompatible)]`) on by default

error: aborting due to 1 previous error; 1 warning emitted

